fix: fix z-indexes

--- a/src/app/chat/chat.module.css
+++ b/src/app/chat/chat.module.css
@@ -7,7 +7,7 @@
     align-items: center;
     height: 100%;
     width: 100%;
-    z-index: 100;
+    z-index: var(--z-index-auth-modal);
     background: rgb(0 0 0 / 50%);
     border-radius: 8px;
 }
